<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vues.ReunionActivity">

    <EditText
        android:id="@+id/txtSujet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="sujet de la réunion"
        android:inputType="text" />

    <LinearLayout
        android:id="@+id/layoutDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/txtSujet">

        <Button
            android:id="@+id/btnDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choisir une date" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:hint="00/00/0000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutHoraire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/layoutDate">

        <Button
            android:id="@+id/btnHoraire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choisir l'horaire" />

        <TextView
            android:id="@+id/txtHoraire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:hint="00:00" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/layoutHoraire">

        <Spinner
            android:id="@+id/spinnerSalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/txtSalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="nom de la salle de reunion"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutParticipants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/layoutSalle">

        <Button
            android:id="@+id/btnParticipants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choisir les participants" />

        <TextView
            android:id="@+id/txtParticipants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Liste des participants"
            android:padding="5dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutParticipants"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="Enregistré" />

</com.google.android.material.circularreveal.CircularRevealRelativeLayout>